--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                     </div>
                     <div class="box-wrapper--right">
                         <form class="form" method="POST" action="http://echo.htmlacademy.ru">
-                           <input class="right-div" name="user_email" type="email" required>
-                           <button class="div_btn" type="submit">Sign Up</button>
+                            <input class="right-div" name="user_email" type="email" required>
+                            <button class="div_btn" type="submit">Sign Up</button>
                         </form>
                         <!-- <div class="right-div">
                             <a class="div_link" href="#">Sign Up</a>
@@ -241,10 +241,14 @@
                         </a>
                         <h3 class="footer_title">A people company.</h3>
                         <div class="img_div">
-                            <img class="icon_img" src="./images/facebook.svg" width="13" height="24" alt="icon">
-                            <img class="icon_img" src="./images/twitter.svg" width="30" height="23" alt="icon">
-                            <img class="icon_img" src="./images/in_icon.svg" width="30" height="28" alt="icon">
-                            <img class="icon_img" src="./images/instagram.svg" width="25" height="25" alt="icon">
+                            <img target="blank" class="icon_img" src="./images/facebook.svg" width="13" height="24"
+                                alt="icon">
+                            <img target="blank" class="icon_img" src="./images/twitter.svg" width="30" height="23"
+                                alt="icon">
+                            <img target="blank" class="icon_img" src="./images/in_icon.svg" width="30" height="28"
+                                alt="icon">
+                            <img target="blank" class="icon_img" src="./images/instagram.svg" width="25" height="25"
+                                alt="icon">
                         </div>
                     </div>
                     <hr class="footer_line">
