--- a/index.html
+++ b/index.html
@@ -241,14 +241,22 @@
                         </a>
                         <h3 class="footer_title">A people company.</h3>
                         <div class="img_div">
-                            <img target="blank" class="icon_img" src="./images/facebook.svg" width="13" height="24"
+                           <a class="icon_link" target="_blank" href="#">
+                            <img  class="icon_img" src="./images/facebook.svg" width="13" height="24"
+                            alt="icon">
+                           </a>
+                            <a class="icon_link" target="_blank" href="#">
+                                <img target="blank" class="icon_img" src="./images/twitter.svg" width="30" height="23"
                                 alt="icon">
-                            <img target="blank" class="icon_img" src="./images/twitter.svg" width="30" height="23"
+                            </a>
+                            <a class="icon_link" target="_blank" href="#">
+                                <img target="blank" class="icon_img" src="./images/in_icon.svg" width="30" height="28"
                                 alt="icon">
-                            <img target="blank" class="icon_img" src="./images/in_icon.svg" width="30" height="28"
-                                alt="icon">
+                            </a>
+                           <a class="icon_link" target="_blank" href="#">
                             <img target="blank" class="icon_img" src="./images/instagram.svg" width="25" height="25"
-                                alt="icon">
+                            alt="icon">
+                           </a>
                         </div>
                     </div>
                     <hr class="footer_line">
