--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clersky</title>
+    <title>Clerksy</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -59,23 +59,23 @@
                 <div class="section-2_box-third">
                     <h3 class="third_title">We partner with the best</h3>
                     <ul class="section-2_menu">
-                        <li class="section-2_item"><a class="section-2_link" href="#">
-                                <img src="./images/stripe.png" width="110" height="51" alt="icon-stripe">
+                        <li class="section-2_item"><a target="_blank" class="section-2_link" href="#">
+                            <img src="./images/stripe.png" width="110" height="51" alt="icon-stripe">
                             </a>
                         </li>
-                        <li class="section-2_item"><a class="section-2_link" href="#">
+                        <li class="section-2_item"><a target="_blank" class="section-2_link" href="#">
                                 <img src="./images/google.png" width="110" height="36" alt="icon-google">
                             </a>
                         </li>
-                        <li class="section-2_item"><a class="section-2_link" href="#">
+                        <li class="section-2_item"><a  target="_blank" class="section-2_link" href="#">
                                 <img src="./images/notion.png" width="110" height="59" alt="icon-notion">
                             </a>
                         </li>
-                        <li class="section-2_item"><a class="section-2_link" href="#">
+                        <li class="section-2_item"><a target="_blank" class="section-2_link" href="#">
                                 <img src="./images/gusto.png" width="110" height="45" alt="icon-gusto">
                             </a>
                         </li>
-                        <li class="section-2_item"><a class="section-2_link" href="#">
+                        <li class="section-2_item"><a target="_blank" class="section-2_link" href="#">
                                 <img src="./images/aircall.png" width="110" height="37" alt="icon-aircall">
                             </a>
                         </li>
